--- a/styles.css
+++ b/styles.css
@@ -47,9 +47,9 @@ ul.lista-livros {
     list-style: none; /*tira os pontos da lista*/
     display: flex;
     gap: 20px; /*espaçamento entre os itens*/
-    margin-left: 15px;
-    padding-block: 10px;
+    margin-inline: 15px;
     clear: both; /*limpa o float*/
+
 }
 
 li.livro {
@@ -60,7 +60,7 @@ li.livro {
     border-radius: 10px;
     width: 500px;
     display: grid;
-    grid-template-rows: 70px 300px 20px;
+    grid-template-rows: 70px 300px 50px;
     transition: 0.3s; /*transição suave*/
     border: 1px solid rgba(0, 0, 0, 0.1);
 }
@@ -90,7 +90,7 @@ div.wrapper {
     width: 100%;
     overflow: auto; /*barra de rolagem*/
     margin-top: 65px; /*espaçamento entre o container e o resto*/
-
+    padding-block: 10px;
 }
 div p{
     /* margin-bottom: 15px; */
@@ -110,7 +110,7 @@ div.livro-destaque {
     border-radius: 10px;
     width: 500px;
     display: grid;
-    grid-template-rows: 70px 300px 20px;
+    grid-template-rows: 70px 300px 50px;
     justify-content: center;
     border: 1px solid rgba(0, 0, 0, 0.1);
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
