--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ footer {
     background: #640369;
     color: white;
     padding: 50px;
-    margin-top: 50px;
+    margin-top: 10px;
 }
 
 ul.lista-livros {
@@ -152,11 +152,11 @@ div.apresentacao{
     border: 1px solid rgba(0, 0, 0, 0.1);
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     padding: 16px;
-
+    margin-top:40px;
 }
 div.apresentacao p{
     text-align: left;
-    margin-top: 13px;
+    /* margin-top: 13px; */
     font-size: 18px;
     font-family: "Barskerville";
     
